# Open-Router-CLI

./: .gitignore  CHANGELOG  LICENSE  README.md  api_handler.py  app.py  app_info.py  chat.py  commands.py  config.py  conversation.py  files.py  main.py  models_core.py  models_filtering.py  models_selection.py  pricing.py  pyproject.toml  recommendations.py  requirements.txt  security.py  session.py  setup.py  tokens.py  ui.py  utils.py
.github/workflows/: publish.yml
orchat/: __init__.py  main.py
