[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orchat"
version = "1.0.0"
description = "A powerful CLI for chatting with AI models through OpenRouter."
authors = [
    { name = "oop7", email = "oop7_support@proton.me" },
]
dependencies = [
    "requests",
    "tiktoken",
    "rich",
    "python-dotenv",
    "colorama",
    "packaging",
]
requires-python = ">=3.7"
readme = "README.md"
license = { text = "MIT License" }

keywords = ["chat", "cli", "ai", "openrouter", "orchat"]

[project.urls]
Homepage = "https://github.com/oop7/orchat"
Bug-Tracker = "https://github.com/oop7/orchat/issues"
Reddit = "https://www.reddit.com/r/NO-N_A_M_E/"
